# cumbridge-hack

./: .gitignore  README.md  main.py  requirements.txt
CrappyStopButton/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
SpotifyDisplayLILYGO/: platformio.ini
SpotifyDisplayLILYGO/src/: main.cpp
gpt3/: main.ipynb  main.py  serial.ipynb  seriall.py
stt/: .gitignore  Makefile  README.md  setup.sh  stop_button.c  stt.py
stt/build-your_mum-Desktop-Debug/: CMakeCache.txt  qtcsettings.cmake
stt/your_mum/: .gitignore  CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
